@@ -1,4 +1,5 @@
 4.0
+ * Lower default chunk_length_in_kb from 64kb to 16kb (CASSANDRA-13241)
  * Avoid running query to self through messaging service (CASSANDRA-14807)
  * Allow using custom script for chronicle queue BinLog archival (CASSANDRA-14373)
  * Transient->Full range movements mishandle consistency level upgrade (CASSANDRA-14759)
